--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "bulma": "^0.9.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "node-fetch": "^2.6.1",
     "node-sass": "^4.14.1",
-    "pug": "^3.0.0"
+    "pug": "^3.0.0",
+    "serve-favicon": "^2.5.0"
   }
 }
